markup done of first and third section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,102 @@
 </head>
 <body>
 
-    <h1>Hi there Everybody</h1>
+    <!-- First Section Starts  -->
+    <section id="first-section">
+        <div class="container">
+            <div class="logo alignLeft">
+                <a href="/"><img src="./images/logo.png" class="logo-img" alt="logo"></a>
+            </div>
+       
+
+        <nav class="navbar">
+            <ul class="nav alignRight">
+                <li><a href="/"></a>Home</li>
+                <li><a href="/"></a>Service</li>
+                <li><a href="/"></a>Produce</li>
+                <li><a href="/"></a>Contact</li>
+                <li><a href="/"></a>Sign in</li>
+            </ul>
+        </nav>
+
+        <div class="header">
+            <div class="header-img">
+                <img src="./images/header-img.png" alt="education" class="h-img">
+            </div>
+            <div class="header-info">
+                <h1>Education for all</h1>
+                <p>A bank is a financial institution that accepts deposits from the 
+                    public and creates credit. For all of your financial needs</p>
+                <a href="/" class="header-button">Read More</a>
+
+            </div>
+        </div>
+
+    </div>
+
+    </section>
+
+    <!-- First Section Ends -->
+
+
+    <!-- Second Section Starts -->
+
+    <section id="second-section">
+
+    </section>
+
+    <!-- Second Section Ends -->
+
+
+    <!-- Third Section Starts -->
+    <section id="third-section">
+
+    </section>
+
+    <!-- Third Section Ends -->
+
+
+    <!-- Fourth Section Starts -->
+    <section id="fourth-section">
+
+    </section>
+
+    <!-- Fourth Section Ends -->
+
+
+
+    <!-- Fifth Section Starts -->
+
+    <section id="fifth-section">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-4">
+                    <img src="./images/globalcitizen.png" alt="globalcitizen">
+                    <h1>Global Student</h1>
+                    <p>Education City is initiative of our Qatar Foundation for Education, Science Community Development.</p>
+                </div>
+
+                <div class="col-4">
+                    <img src="./images/brainstrom.png" alt="brainstrom">
+                    <h1>Success Rate</h1>
+                    <p>Education City is initiative of our Qatar Foundation for Education, Science Community Development.</p>
+
+                </div>
+                <div class="col-4">
+                    <img src="./images/graduationcap.png" alt="graduationcap">
+                    <h1>Education Services</h1>
+                    <p>Education City is initiative of our Qatar Foundation for Education, Science Community Development.</p>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+
+    <!-- Fifth Section Ends -->
+
+  
 
 
 
